# CS4023-Project1

./: CMakeLists.txt  CS 4023 Project 1 World Documentation.txt  Proj1World  README.md  codedocumentation.txt  model.sdf  package.xml
rviz/: navigation.rviz
scripts/: my_node.py  teleop_keyboard.py
worlds/: Proj1World.world  model.config  start_proj1world.launch  turtlebot_world.launch
