<?xml version="1.0"?>
<package format="2">
  <name>my_project</name>
  <version>0.0.1</version>
  <description>A simple ROS package in Python</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build and run dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- If you add other message types, list them here -->
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>sensor_msgs</depend> -->

  <!-- For Python 2 (Melodic default) you don’t need explicit interpreter dep -->
</package>
