<?xml version="1.0"?>
<package format="2">
  <name>cs4023_project1</name>
  <version>0.0.1</version>
  <description>A simple ROS package in Python</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build and run dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>kobuki_msgs</depend>


  <!-- If you add other message types, list them here -->
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>sensor_msgs</depend> -->

  <!-- For Python 2 (Melodic default) you don’t need explicit interpreter dep -->
</package>
